Bug 137418 - save error dialog is not very helpful
Summary: save error dialog is not very helpful
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-11-15 19:48 UTC by Andrew Ziem
Modified: 2009-02-28 15:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot---- candidate for thedailywtf.com ? (11.51 KB, image/png)
2006-11-15 19:59 UTC, Andrew Ziem
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Ziem 2006-11-15 19:48:05 UTC
Version:            (using KDE KDE 3.5.5)
Installed from:    Fedora RPMs

This report is more about the dialog than what triggered the error.  So, the dialog says

"Save Error - KOrganizer
Saving of 'andrew' failed.  Check that the resource is properly configured
Ignore problem and continue without saving or cancel save?
[Do Not Save] [Cancel]"

It's difficult to distinguish what the difference is between the two choices.  It seems that with either option there will be no retry.  

Suggested changes:
1. Give more details on the source of the error
2. Distinguish the choices
3. Add a retry option

Notes:
I only saw this error once.

System details:
- Fedora Core 5
- kdepim-3.5.5-0.2.fc5
- kdelibs-3.5.5-0.8.fc5
- calendar is iCalender stored on Apache through WebDAV
- Apache server is on LAN
Comment 1 Andrew Ziem 2006-11-15 19:59:07 UTC
Created attachment 18568 [details]
screenshot----  candidate for thedailywtf.com ?
Comment 2 Sergio Martins 2009-02-28 15:02:53 UTC
SVN commit 933258 by smartins:

Choose better wording for this dialog, it was very confusing.

BUG: 137418


 M  +5 -3      actionmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=933258