Choose better wording for this dialog, it was very confusing.

BUG: 137418

svn path=/trunk/KDE/kdepim/; revision=933258